<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <ImageView
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:id="@+id/locationImage"
        android:layout_gravity="left|center_vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/photo_preview"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LocationHeaderText"
        android:text="@string/description"
        android:id="@+id/locationDescription"
        android:layout_toRightOf="@+id/locationImage"
        android:layout_alignTop="@+id/locationImage"
        android:layout_marginLeft="5dip"
        android:lines="3"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LocationDetailsText"
        android:text="@string/category"
        android:id="@+id/locationCategory"
        android:layout_alignLeft="@+id/locationDescription"
        android:layout_below="@+id/locationDescription"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LocationDetailsText"
        android:text="@string/address"
        android:id="@+id/locationAddress1"
        android:layout_alignLeft="@+id/locationDescription"
        android:layout_below="@+id/locationCategory"/>

    <TextView
        style="@style/LocationDetailsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:id="@+id/locationAddress2"
        android:layout_alignLeft="@+id/locationDescription"
        android:layout_below="@+id/locationAddress1"/>

</RelativeLayout>